--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,58 @@
+html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    height: 0px;
+}
 /*Estilo del reloj*/
- #reloj {
+.content-reloj {
+    width: 200px;
     border-radius: 5px;
     color: #FFFFFF;
     font-family: Arial, Verdana;
     font-weight: bold;
-    background: -webkit-linear-gradient(left, black, red);
-    background: -moz-linear-gradient(left, black, red);
-    background: -o-linear-gradient(left, black, red);
-    background: linear-gradient(left, black, red);
-    box-shadow: 2px 2px 2px grey;
     padding: 5px;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    font-size: 1.4em;
+}
+.inline{
+    display: inline-block;
+}
+
+/* Header lineas*/
+.large-header {
+    position: relative;
+    width: 100%;
+    background: #333;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+    z-index: 1;
+}
+.demo-1 .large-header {
+    background-image: url('../img/demo-1-bg.jpg');
+    background-size: cover;
+}
+.main-title {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    color: #f9f1e9;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate3d(-50%,-50%,0);
+    transform: translate3d(-50%,-50%,0);
+}
+.demo-1 .main-title {
+    text-transform: uppercase;
+    font-size: 4.2em;
+    letter-spacing: 0.1em;
+}
+@media only screen and (max-width : 768px) {
+    .demo-1 .main-title{
+        font-size: 3em;
+    }
 }
