--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html,body{
 }
 .body{
     width:500px;
-    height: 500px; 
+    height: 600px; 
     background: rgba(24, 104, 136, 0.85);
     position:absolute; 
     top: 5% ; 
@@ -77,7 +77,8 @@ h2{
     left: 2%;
 }
 
-#name{
+#name,
+#lastname{
     border-radius: 5px;
     padding: 2px;
     width: 300px;
